# Cpp-OpenGL-CMake-Template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Application/: CMakeLists.txt
Application/src/: main.cpp
